--- a/.github/workflows/sync_upstream_cron.yml
+++ b/.github/workflows/sync_upstream_cron.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
+          ref: develop
           fetch-depth: 0 
       - name: Merge Upstream
         uses: rovast/sync-upstream-repo@v0.0.1
@@ -26,6 +27,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
+          ref: intel-develop
           fetch-depth: 0 
       - name: Merge Upstream
         uses: rovast/sync-upstream-repo@v0.0.1
