--- a/.github/workflows/sync_upstream_manual.yml
+++ b/.github/workflows/sync_upstream_manual.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
+          ref: ${{ github.event.inputs.branch }}
           fetch-depth: 0 
       - name: Merge Upstream
         uses: rovast/sync-upstream-repo@v0.0.1
