--- a/.github/workflows/sync_upstream_manual.yml
+++ b/.github/workflows/sync_upstream_manual.yml
@@ -26,7 +26,7 @@ jobs:
           ref: ${{ github.event.inputs.branch }}
           fetch-depth: 0 
       - name: Merge Upstream
-        uses: rovast/sync-upstream-repo@v0.0.1
+        uses: Andrey1994/sync-upstream-repo@0.0.2
         with:
           upstream_repo: ${{ github.event.inputs.upstream }}
           upstream_branch: ${{ github.event.inputs.upstreambranch }}
