--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,4 +13,7 @@ updates:
     labels:
       - "dependencies"
     reviewers:
-      - "StephanHCB"
+      - "mplushikov"
+      - "KRaffael"
+      - "Roshick"
+      - "tstollin"
