--- a/charts/clc/templates/nimbus/statefulset.yml
+++ b/charts/clc/templates/nimbus/statefulset.yml
@@ -138,6 +138,7 @@ spec:
               --port={{ .Values.settings.p2p.port }} \
               --discovery-port={{ .Values.settings.p2p.port }} \
               --listen-address="0.0.0.0" \
+              --enr-address="${pip}" \
               --validator-monitor-auto \
               --disable-deposit-contract-sync \
               --http \
