--- a/charts/clc/templates/nimbus/statefulset.yml
+++ b/charts/clc/templates/nimbus/statefulset.yml
@@ -1,4 +1,4 @@
-{{ if eq .Values.global.clc "lighthouse" -}}
+{{ if eq .Values.global.clc "nimbus" -}}
 
 ---
 apiVersion: apps/v1
@@ -71,7 +71,7 @@ spec:
           chown -R 1000:1000 {{ .Values.settings.dataPath }}
 
       containers:
-      - name: lighthouse
+      - name: nimbus
         image: {{ .Values.image.clc.repository }}:{{ .Values.image.clc.tag }}
         imagePullPolicy: {{ .Values.image.clc.imagePullPolicy }}
         resources:
@@ -118,45 +118,39 @@ spec:
             containerPort: {{ .Values.settings.metrics.port }}
             protocol: TCP
         command:
-          - /bin/bash
+          - /bin/sh
           - -c
         args:
           - |
             exec
 
             pip=$(cat /pip/ip)
-            lighthouse beacon_node \
+            
+            /home/user/nimbus-eth2/build/nimbus_beacon_node \
               --network={{ .Values.global.network }} \
-              --datadir={{ .Values.settings.dataPath | quote }} \
-              --debug-level={{ lower .Values.settings.logging | quote }} \
-              --logfile-debug-level={{ lower .Values.settings.logging | quote }} \
-              --log-format=JSON \
-              --suggested-fee-recipient="0x0000000000000000000000000000000000000000" \
-              --execution-endpoint="http://{{ .Release.Name }}-{{ .Values.global.elc }}-{{ .Values.global.network }}-{{ .Values.global.env }}.{{ include "ethnode.namespace" . }}.svc.cluster.local:8551" \
-              --execution-jwt="{{ .Values.global.jwt.secretPath }}/jwtSecret.hex" \
-              --checkpoint-sync-url="https://beaconstate-{{ .Values.global.network }}.chainsafe.io" \
-              --port={{ .Values.settings.p2p.port }} \
-              --discovery-port={{ .Values.settings.p2p.port }} \
-              --listen-address="0.0.0.0" \
-              --enr-address="${pip}" \
+              --data-dir={{ .Values.settings.dataPath | quote }} \
+              --log-level={{ lower .Values.settings.logging | quote }} \
+              --log-format=json \
+              --non-interactive \
+              --status-bar=false \
+              --doppelganger-detection \
               --validator-monitor-auto \
-              --disable-deposit-contract-sync \
-              --http \
-              --http-address={{ .Values.settings.restApi.host | quote }} \
-              --http-port={{ .Values.settings.restApi.port }} \
-              --http-allow-origin={{ join "," .Values.settings.restApi.corsOrigins }} \
+              --suggested-fee-recipient="0x0000000000000000000000000000000000000000" \
+              --web3-url="http://{{ .Release.Name }}-{{ .Values.global.elc }}-{{ .Values.global.network }}-{{ .Values.global.env }}.{{ include "ethnode.namespace" . }}.svc.cluster.local:8551" \
+              --jwt-secret="{{ .Values.global.jwt.secretPath }}/jwtSecret.hex" \
+              --enr-auto-update=false \
+              --tcp-port={{ .Values.settings.p2p.port }} \
+              --udp-port={{ .Values.settings.p2p.port }} \
+              --nat=extip:${pip} \
+              --rest \
+              --rest-address={{ .Values.settings.restApi.host | quote }} \
+              --rest-port={{ .Values.settings.restApi.port }} \
+              --rest-allow-origin={{ join "," .Values.settings.restApi.corsOrigins }} \
               --metrics \
               --metrics-address={{ .Values.settings.metrics.host | quote }} \
               --metrics-port={{ .Values.settings.metrics.port }}
 
-
-        livenessProbe:
-          httpGet:
-            path: "/lighthouse/health"
-            port: {{ .Values.settings.restApi.port }}
-          initialDelaySeconds: 120
-          periodSeconds: 30
-      
+     
       volumes:
       - name: clc-jwt
         secret:
