--- a/charts/ethereum-helm-charts/charts/clc/values.yaml
+++ b/charts/ethereum-helm-charts/charts/clc/values.yaml
@@ -6,7 +6,7 @@ env: test
 snapshot:
   # sot (source of truth) node, ie this is what we will create snapshots of
   sot: false
-  # use the defaults of hourly, daily, weekly
+  # use the defaults of @hourly, @daily, @weekly
   schedule: "@weekly"
 restore:
   enabled: false
