--- a/examples/mainnet/besu-prysm-azure.yaml
+++ b/examples/mainnet/besu-prysm-azure.yaml
@@ -4,10 +4,10 @@ global:
   env: dev
   network: mainnet
   elc: besu
-  clc: lodestar
+  clc: prysm
   snapshot:
     # sot (source of truth) node, ie this is what we will create snapshots of
-    sot: true
+    enabled: false
     # use the defaults of hourly, daily, weekly
     schedule: "@hourly"
 
@@ -16,9 +16,6 @@ elc:
     elc:
       repository: hyperledger/besu
       tag: latest
-  restore:
-    enabled: false
-    snapshot: ""
   storage:
     allowVolumeExpansion: true
     volumeBindingMode: WaitForFirstConsumer
@@ -52,12 +49,11 @@ elc:
 clc:
   image:
     clc:
-      repository: chainsafe/lodestar
+      repository: gcr.io/prysmaticlabs/prysm/beacon-chain
       tag: latest
-  restore:
-    enabled: false
-    snapshot: ""
-  
+  settings:
+    grpc:
+      port: 5052
   storage:
     allowVolumeExpansion: true
     volumeBindingMode: WaitForFirstConsumer
