--- a/examples/mainnet/besu-lighthouse-azure.yaml
+++ b/examples/mainnet/besu-lighthouse-azure.yaml
@@ -1,13 +1,13 @@
 ---
 global:
-  provider: aws
+  provider: azure
   env: dev
   network: mainnet
   elc: besu
-  clc: teku
+  clc: lighthouse
   snapshot:
     # sot (source of truth) node, ie this is what we will create snapshots of
-    sot: true
+    enabled: false
     # use the defaults of hourly, daily, weekly
     schedule: "@hourly"
 
@@ -16,24 +16,20 @@ elc:
     elc:
       repository: hyperledger/besu
       tag: latest
-  restore:
-    enabled: false
-    snapshot: ""
   storage:
     allowVolumeExpansion: true
     volumeBindingMode: WaitForFirstConsumer
     reclaimPolicy: Delete
     size: "1000Gi"
     parameters:
-      type: gp3
-      csi.storage.k8s.io/fstype: xfs
+      skuName: Premium_LRS
   tolerations:
     - key: ethereum
       value: "true"
       effect: NoExecute
     - key: ethereum
       value: "true"
-      effect: NoSchedule      
+      effect: NoSchedule
   affinity:
     podAntiAffinity:
       requiredDuringSchedulingIgnoredDuringExecution:
@@ -49,22 +45,22 @@ elc:
             operator: In
             values:
             - ethereum
+
 clc:
   image:
     clc:
-      repository: consensys/teku
+      repository: sigp/lighthouse
       tag: latest
-  restore:
-    enabled: false
-    snapshot: ""
+  settings:
+    grpc:
+      port: 5052
   storage:
     allowVolumeExpansion: true
     volumeBindingMode: WaitForFirstConsumer
     reclaimPolicy: Delete
     size: "250Gi"
     parameters:
-      type: gp3
-      csi.storage.k8s.io/fstype: xfs
+      skuName: Premium_LRS
   tolerations:
     - key: ethereum
       value: "true"
