Support for podTargetLabels in service monitor
Service monitor for elc and clc now support configuring podTargetLabels which allows adding specific pod labels in a service as Prometheus labels

--- a/charts/ethereum-helm-charts/charts/clc/templates/service.yaml
+++ b/charts/ethereum-helm-charts/charts/clc/templates/service.yaml
@@ -48,3 +48,8 @@ spec:
     path: /metrics
     scheme: http
     honorLabels: true
+  {{- with .Values.service.monitor }}
+  {{- if and (.podTargetLabels) (eq (kindOf .podTargetLabels) "slice" ) }}
+  podTargetLabels: {{ .podTargetLabels }}
+  {{- end }}
+  {{- end }}
