--- a/charts/ethereum-helm-charts/Chart.yaml
+++ b/charts/ethereum-helm-charts/Chart.yaml
@@ -2,10 +2,10 @@ apiVersion: v2
 name: ethnode
 description: An Ethereum Helm chart for Kubernetes
 type: application
-version: 0.1.1
+version: 0.1.2
 
 dependencies:
   - name: elc
-    version: "~0.0.1"
+    version: "0.0.2"
   - name: clc
-    version: "~0.0.1"
+    version: "0.0.2"
